--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,7 @@ main{
 
 aside{
     width: 20rem
-    margin: 1rem;
+    margin 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
     background-color: #eee;
