--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,8 +30,8 @@ main{
 }
 
 aside{
-    width: 20rem
-    margin 1rem;
+    width: 20rem;
+    margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
     background-color: #eee;
