--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav{
     background-color: steelblue;
     padding: 10px;
@@ -22,7 +28,7 @@ main img{
 }
 
 p{
-    padding: 0;
+    padding: 10px;
 }
 
 main{
@@ -30,12 +36,8 @@ main{
 }
 
 aside{
+    position: relative;
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: center;
 }
 
@@ -44,8 +46,31 @@ aside img{
     height: auto;
 }
 
+aside p{
+    padding: 0;
+}
+
 footer{
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selector */
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0,.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+main img{
+    float:right;
+}
+
+aside h2{
+    position: absolute;
+    top: 47px;
+    left: 150px;
 }
