--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,76 +1,96 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+    margin : 0;
+    padding : 0;
+    box-sizing : border-box;
+}
+    
+.grid {
+    display : grid;
+    align-items : center;
+}
+    
+main {
+    grid-column : 2 / 3;
+    margin : 1rem;
 }
 
-nav{
-    background-color: steelblue;
-    padding: 10px;
+nav {
+    background-color : steelblue;
+    padding : 1rem;
+    display : flex;
+    justify-content : space-evenly;
+    align-items : center;
 }
 
-nav a{
-    color: white;
-    display: block;
-    padding: 20px;
+nav a {
+    color : white;
+    padding : 0.5rem;
+    display : block;
+    text-decoration : none;
+    font-size : 1.2rem;
+    font-weight : 700;
 }
 
-h1{
-    color: steelblue;
+h1 {
+    color : steelblue;
+    border-bottom : 1px solid steelblue;
+    margin-bottom : 10px;
+}
+    
+aside h2 {
+    position : absolute;
+    top : 47px;
+    left : 100px;
+    color : bisque;
+}
+   
+aside {
+    width : 20rem;
+    margin : 1rem;
+    border : rgb(0, 0, 0, 0.2) solid 1px;
+    padding : 1rem;
+    background-color : #eee;
+    color : #333;
+    text-align : center;
+    position : relative;
+    grid-column : 1 / 2;
+    grid-row : 1 / 2;
+}
+    
+aside img {
+    width : 200px;
+    height : auto;
 }
 
-main img{
-    width: 150px;
-    height:auto;
-    border: 1px solid steelblue;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
+main img {
+    width : 150px;
+    height : auto;
+    border : steelblue solid 1px;
+    padding : 2px;
+    box-shadow : 0 0 30px gray;
+    float : right;
 }
 
-p{
-    padding: 10px;
+p {
+    padding : 0;
+}
+    
+footer {
+    margin-top : 15px;
+    border-top : 1px solid #000;
+    text-align : center;
 }
 
-main{
-    max-width: 840px;
+
+.box {
+    margin : 1rem;
+    border : rgb(0, 0, 0, 0.1) solid 1px;
+    padding : 1rem;
+    background-color : lightblue;
+    color : black;
 }
 
-aside{
-    position: relative;
-    width: 20rem;
-    text-align: center;
-}
-
-aside img{
-    width: 200px;
-    height: auto;
-}
-
-aside p{
-    padding: 0;
-}
-
-footer{
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: center;
-}
-
-/* Class Selector */
-.box{
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0,.1);
-    padding: 1rem;
-    background-color: #ddd;
-    color: #000;
-}
-
-main img{
-    float:right;
-}
-
-aside h2{
-    position: absolute;
-    top: 47px;
-    left: 150px;
+header, footer, .grid {
+    max-width : 840px;
+    margin : 0 auto;
 }
